--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!-- Slide Zero -->
 	<div class="active main-carousel-item carousel-item carousel-background main-carousel-filter"  style="background:#000;">
 		<div class="carousel-caption d-md-block" style="color:#fff;">
-			<h2><span class="animated fadeInDownBig">BioTherm has been at the forefront of developing highly efficient greenhouse solutions since 1980.</span></h2>
+			<h2 class="front-title"><span class="animated fadeInDownBig">BioTherm has been at the forefront of developing highly efficient greenhouse solutions since 1980.</span></h2>
 			<br />
 		</div>
 		<!--<img src="img/slide-1.png" width="100%" style="margin-top:100px;">-->
@@ -67,7 +67,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#ed1c24;">
 		<div class="carousel-caption d-md-block">
-			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> <b>Climate Systems</b></span></h2>
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> Climate Systems</span></h2>
 			<h3 class="front-title animated fadeInUp">Heating, Cooling, Dehumidification &amp; CO<sub>2</sub></h3>
 			<p><span class="animated fadeInDownBig"><a href="heat.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -76,7 +76,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background main-carousel-filter" style="background-image: url('img/heat.jpg')">
 		<div class="carousel-caption d-md-block">
-			<h2 class="animated slideInUp">Improving Heating Costs and Plant Health</h2>
+			<h2 class="animated slideInUp front-title">Improving Heating Costs and Plant Health</h2>
 			<p>Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
 			<p><a href="case-micheals.html"><button type="button" class="btn btn-danger"><b>Read the Case Study</b></button></a></p>
 		</div>
@@ -85,7 +85,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#1c8bed;">
 		<div class="carousel-caption d-md-block">
-			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-hydro-white-full.png" width=50px style="margin:0 0 0 -55px"/> Hydro Sciences</span></h2>
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-hydro-white-full.png" width=50px style="margin:0 0 0 -45px"/> Hydro Sciences</span></h2>
 			<h3 class="animated fadeInUp">Oxygen Infusion, Flood Floors, &amp; Nutrient Dosing</h3>
 			<p><span class="animated fadeInDownBig"><a href="hydro.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -94,7 +94,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background main-carousel-filter" style="background-image: url('img/project_north_creek_nursery.jpg')">
 		<div class="carousel-caption d-md-block">
-			<h2><span class="animated fadeInDown"><b>Improving Plant Health and Yields</b></span></h2>
+			<h2 class="front-title"><span class="animated fadeInDown"><b>Improving Plant Health and Yields</b></span></h2>
 			<h3 class="animated fadeInUp">Manfred Orozco - Manfred and Son’s Greenhouse, Annapolis, MD</h3>
 			<p><a href="case-micheals.html"><button type="button" class="btn btn-hydro"><b>Read the Case Study</b></button></a></p>
 		</div>
@@ -103,7 +103,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background:#16c462;">
 		<div class="carousel-caption d-md-block">
-			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-tech-white-full.png" width=50px style="margin:0 0 0 -55px"/> Data &amp; Automation</span></h2>
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-tech-white-full.png" width=50px style="margin:0 0 0 -40px"/> Data &amp; Automation</span></h2>
 			<h3 class="animated fadeInUp">Data Visualization, Controls, &amp;	Wireless technologies</h3>
 			<p><span class="animated fadeInDownBig"><a href="tech.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -112,7 +112,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background main-carousel-filter" style="background-image: url('img/heat-side.jpg')">
 		<div class="carousel-caption d-md-block">
-			<h2 class="animated slideInUp">Controlling Costs and Improving Consistency</h2>
+			<h2 class="animated slideInUp front-title">Controlling Costs and Improving Consistency</h2>
 			<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
 			<p><a href="case-micheals.html"><button type="button" class="btn btn-success"><b>Read the Case Study</b></button></a></p>
 		</div>
@@ -121,7 +121,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background main-carousel-filter" style="background-image: url('img/KYG_Dashboard.jpg')">
 		<div class="carousel-caption d-md-block">
-			<h2 class="animated fadeInUp"><b>Know</b> Your <b>Grow</b></h2>
+			<h2 class="animated fadeInUp front-title"><b>Know</b> Your <b>Grow</b></h2>
 			<h3>Wireless Data Collection and Visualization</h3>
 			<p><a href="tech.html"><button type="button" class="btn btn-success">Data &amp; Automation</button></a></p>
 		</div>
