--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#ed1c24;">
 		<div class="carousel-caption d-md-block">
-			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> Climate Systems</span></h2>
+			<h2 class="front-title"><span class="animated fadeInDown"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> Heating Systems</span></h2>
 			<h3 class="front-title animated fadeInUp">Heating, Cooling, Dehumidification &amp; CO<sub>2</sub></h3>
-			<p><span class="animated fadeInDownBig"><a href="heat.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
+			<p><span class="animated fadeInDown"><a href="heat.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
 	</div>
 	
@@ -103,7 +103,7 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background:#16c462;">
 		<div class="carousel-caption d-md-block">
-			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-tech-white-full.png" width=50px style="margin:0 0 0 -40px"/> Data &amp; Automation</span></h2>
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-tech-white-full.png" width=50px style="margin:0 0 0 -40px"/> Optimized Air</span></h2>
 			<h3 class="animated fadeInUp">Data Visualization, Controls, &amp;	Wireless technologies</h3>
 			<p><span class="animated fadeInDownBig"><a href="tech.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -154,12 +154,13 @@
 									<div class="icon icon-info">
 										<a href="heat.html"><img class="img" src="img/biotherm-heat.png" style="width:50px;"/></a>
 									</div>
-									<a href="heat.html"><h4 class="card-title">Climate Systems</h4></a>
+									<a href="heat.html"><h4 class="card-title">Heating Systems</h4></a>
 									<ul class="product-card-list">
 											<li><a href="heat.html">Heating</a></li>
 											<li><a href="heat.html">Cooling</a></li>
 											<li><a href="heat.html">Dehu &amp; CO<sub>2</sub></a></li>
 									</ul>
+									<p>Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects. BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money.</p>
 									</div>
 								</div>
 							</div>
@@ -171,10 +172,12 @@
 									</div>
 									<h4 class="card-title">Hydro Sciences</h4>
 									<ul class="product-card-list">
-											<li><a href="hydro.html">Oxygen Infusion</a></li>
-											<li><a href="hydro.html">Flood Floors</a></li>
-											<li><a href="hydro.html">Nutrient Dosing</a></li>
+											<li><a href="hydro.html">Dissolved Oxygen Infusion</a></li>
+											<li><a href="hydro.html">Sub-Irrigation Flood Floors</a></li>
+											<li><a href="hydro.html">Irrigation PreHeat and Chilling</a></li>
 									</ul>
+									<p>BioTherm Hydro Sciences has a simple focus... to enhance your irrigation system and boost plant growth using cutting edge technologies with efficiency in mind. Our products are proven to increase yeilds, improve plant vigor, and increase resistance to diseases and pests.</p>
+
 								</div>
 							</div>
 						</div>
@@ -184,12 +187,13 @@
 									<div class="icon icon-danger">
 										<img class="img" src="img/biotherm-tech.png" style="width:50px;"/>
 									</div>
-									<h4 class="card-title">Data &amp; Automation</h4>
+									<h4 class="card-title">Optimized Air</h4>
 									<ul class="product-card-list">
-											<li><a href="tech.html">Data Visualization</a></li>
-											<li><a href="tech.html">Control Solutions</a></li>
-											<li><a href="tech.html">Wireless technologies</a></li>
+											<li><a href="tech.html">Dehumidification</a></li>
+											<li><a href="tech.html">Hydronic Cooling Systems</a></li>
+											<li><a href="tech.html">CO<sub>2</sub> Enrichment</a></li>
 									</ul>
+									<p>BioTherm is proud to announce the lastest in greenhouse and indoor air treatment technologies. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</p>
 								</div>
 							</div>
 						</div>
