--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#ed1c24;">
 		<div class="carousel-caption d-md-block">
 			<h2 class="front-title"><span class="animated fadeInDown"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> Heating Systems</span></h2>
-			<h3 class="front-title animated fadeInUp">Heating, Cooling, Dehumidification &amp; CO<sub>2</sub></h3>
+			<h3 class="front-title animated fadeInUp">Ground, Bench, Space,  &amp; Crop</h3>
 			<p><span class="animated fadeInDown"><a href="heat.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
 	</div>
@@ -76,8 +76,17 @@
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background main-carousel-filter" style="background-image: url('img/heat.jpg')">
 		<div class="carousel-caption d-md-block">
-			<h2 class="animated slideInUp front-title">Improving Heating Costs and Plant Health</h2>
-			<p>Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
+			<h2 class="animated slideInUp front-title">Improving Turns and Planning for the Future</h2>
+			<h3>Patrick Herzing - Micheal's Greenhouse, Cheshire CT.</h3>
+			<p><a href="case-micheals.html"><button type="button" class="btn btn-danger"><b>Read the Case Study</b></button></a></p>
+		</div>
+	</div>
+	
+	<!-- Slide -->
+	<div class="main-carousel-item carousel-item carousel-filter carousel-background main-carousel-filter" style="background-image: url('img/heat.jpg')">
+		<div class="carousel-caption d-md-block">
+			<h2 class="animated slideInUp front-title">Controlling Costs and Improving Consistency</h2>
+			<h3>Beth Tinsdale - Beth's Ornamentals, Tacinam WA</h3>
 			<p><a href="case-micheals.html"><button type="button" class="btn btn-danger"><b>Read the Case Study</b></button></a></p>
 		</div>
 	</div>
@@ -156,11 +165,12 @@
 									</div>
 									<a href="heat.html"><h4 class="card-title">Heating Systems</h4></a>
 									<ul class="product-card-list">
-											<li><a href="heat.html">Heating</a></li>
-											<li><a href="heat.html">Cooling</a></li>
-											<li><a href="heat.html">Dehu &amp; CO<sub>2</sub></a></li>
+											<li><a href="heat.html">Boilers</a></li>
+											<li><a href="heat.html">Ground</a> / <a href="heat.html">Bench</a></li>
+											<li><a href="heat.html">Crop</a> / <a href="heat.html">Space</a></li>
 									</ul>
-									<p>Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects. BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money.</p>
+									<!--<p>Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects. BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money.</p>-->
+									<a href="heat.html"><button type="button" class="btn btn-danger"><b>Heating Systems</b></button></a>
 									</div>
 								</div>
 							</div>
@@ -176,8 +186,8 @@
 											<li><a href="hydro.html">Sub-Irrigation Flood Floors</a></li>
 											<li><a href="hydro.html">Irrigation PreHeat and Chilling</a></li>
 									</ul>
-									<p>BioTherm Hydro Sciences has a simple focus... to enhance your irrigation system and boost plant growth using cutting edge technologies with efficiency in mind. Our products are proven to increase yeilds, improve plant vigor, and increase resistance to diseases and pests.</p>
-
+									<!--<p>BioTherm Hydro Sciences has a simple focus... to enhance your irrigation system and boost plant growth using cutting edge technologies with efficiency in mind. Our products are proven to increase yeilds, improve plant vigor, and increase resistance to diseases and pests.</p>-->
+									<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Hydro Sciences</b></button></a>
 								</div>
 							</div>
 						</div>
@@ -193,7 +203,8 @@
 											<li><a href="tech.html">Hydronic Cooling Systems</a></li>
 											<li><a href="tech.html">CO<sub>2</sub> Enrichment</a></li>
 									</ul>
-									<p>BioTherm is proud to announce the lastest in greenhouse and indoor air treatment technologies. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</p>
+									<!--<p>BioTherm is proud to announce the lastest in greenhouse and indoor air treatment technologies. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</p>-->
+									<a href="tech.html"><button type="button" class="btn btn-success"><b>Optimized Air</b></button></a>
 								</div>
 							</div>
 						</div>
@@ -243,11 +254,21 @@
 	<div class="" data-parallax="true" style="background:#5a5a5a">
 		<div class="container section">
 			<div class="row justify-content-md-center">
-				<div class="col col-lg-4">
-					<img class="img-fluid" src="img/brochure.jpg">
+				<div class="col col-lg-3">
+					<img class="img-fluid" src="img/2018_brochure.png" style="max-width:200px;float:right;">
 				</div>
-				<div class="col col-lg-4">
-					<img class="img-fluid" src="img/brochure2.jpg">
+				<div class="col col-lg-3">
+					<h4 class="card-title" style="color:#fff">View Our Brochure</h4>
+					<p style="color:#fff">for more information on our products and services.</p>
+					<p><a href="files/BioTherm_Brochure.pdf"><button type="button" class="btn btn-danger"><b>Download</b></button></a></p>
+				</div>
+				<div class="col col-lg-3">
+					<img class="img-fluid" src="img/2018_brochure_questionnaire.png" style="max-width:200px;float:right;">
+				</div>
+				<div class="col col-lg-3">
+					<h4 class="card-title" style="color:#fff">Solution Proposal Questionnaire</h4>
+					<p style="color:#fff">to help organize your needs and communicate them to us.</p>
+					<p><a href="files/BioTherm_Brochure.pdf"><button type="button" class="btn btn-danger"><b>Download</b></button></a></p>
 				</div>
 			</div>
 			<br />
@@ -269,7 +290,7 @@
 								</div>
 								<div class="card-body">
 									<h6 class="card-category text-info"><i class="far fa-lightbulb fa-2x"></i> Enterprise</h6>
-									<h4 class="card-title"><a href="post-efficient-heat-greenhouse-winter.html">What Is the Most Efficient Way to Heat a Greenhouse in the Winter?</a></h4>
+									<h4 class="card-title"><a href="post-efficient-heat-greenhouse-winter.html">Improving Heating Costs and Plant Health</a></h4>
 									<p class="card-description">If you’re growing your crops year-round using a light deprivation greenhouse, heating costs can be prohibitive, especially in winter. <a href="post-efficient-heat-greenhouse-winter.html"> Read More </a></p>
 								</div>
 							</div>
@@ -293,8 +314,8 @@
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-danger"><i class="fas fa-map-marker-alt fa-2x"></i> Project</h6>
-									<h4 class="card-title"><a href="post-spotlight-micheals-greenhouses.html">Project Spotlight: Michael’s Greenhouses</a></h4>
-									<p class="card-description">Michael's Greenhouses is located in Cheshire CT and has been owned and operated by the Arisco family since 1969. Michael's is a leading wholesale grower of annuals and perennials. <a href="post-spotlight-micheals-greenhouses.html"> Read More </a></p>
+									<h4 class="card-title"><a href="post-spotlight-micheals-greenhouses.html">Holy City Farms, Charleston, SC</a></h4>
+									<p class="card-description">BioTherm provided Holy City with a complete Biotherm Oxygen Infusion package, which included a Toob Infuser, Oxygen Generator, and DO Commander in an effort to increased yield. <a href="post-spotlight-micheals-greenhouses.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
@@ -322,7 +343,7 @@
 		<div class="container section">
 			<div class="row">
 				<div class="col-md-8 ml-auto mr-auto text-center">
-					<h3 class="title" style="color:#fff;"> Newsletter</h3>
+					<h3 class="title" style="color:#fff;">Sign Up for Our Newsletter</h3>
 					<h4 style="color:#fff;">If you're interested in our solutions, please sign up to recieve our newsletter. We won't spam you and we won't share your email address with anyone else.</h4>
 				</div>
 				<div class="col-md-10 ml-auto mr-auto">
