--- a/heat.html
+++ b/heat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Climate Systems | BioTherm Solutions</title>
+	<title>Heating Systems | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Climate</b> Systems</h1>
+				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heating</b> Systems</h1>
 				<h3>Efficient Greenhouse Heating</h3>
 				<h4>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h4>
 			</div>
