--- a/air.html
+++ b/air.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Top Space Heat | BioTherm Solutions</title>
+	<title>Optimized Air | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,136 +42,122 @@
 	</div>
 </nav>
 
-<div class="page-header header-smaller" data-parallax="true" style=" background-image: url('img/heat-applications-gutter.jpg'); ">
+<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h2>Top Greenhouse Heating</h2>
-				<h3>Heat large spaces.</h3>
+				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized Air</h1>
+				<h4>Biotherm creates innovative technology solutions for commerical plant growers.</h4>
 			</div>
 		</div>
-
+		<!--<div class="row header-image-credit">
+			<div class="col-md-4 offset-md-8 text-right">
+				<p>
+					Flood Floor Irrigation: <b>The Project Name</b><br />
+					Ōkuma, Fukushima, Japan<br />
+					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
+				</p>
+			</div>
+		</div>-->
 	</div>
 </div>
 
+
 <div class="main main-raised">
-	<div class="container section section-top">
 
+	<div class="container section">
 		<div class="row">
-			<div class="col-md-9">
-				<div class="row">
-					<div class="col-md-10">
-						<p class="lead">Unit Heaters are the default choice, but not the only choice.</p>
-						<p>Several hot water delivery systems work well to heat large spaces, and even the unit heaters are better than they used to be. We have heaters specifically selected for their performance in the greenhouse industry.</p>
-					</div>
-				</div>
+			<div class="col-md-6">
+				<h3>Do You Know Your Grow?</h3>
+				<p>The KnowYourGrow platform will open up an entirely new view into the health of your plants. You are likely already
+measuring pH and EC in your water, but what about Dissolved Oxygen? Do you know how water temperature affects those readings? How about water content in your rootzone? These and other questions are answered by KnowYourGrow. Both real-time and historical readings are available via a local web interface on
+any device. It is all about the data. Your plants are trying to tell you something...it is time to start listening!</p>
 			</div>
-			<div class="col-md-3">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h3 class="no-top-margin">Applications</h3>
-					</div>
-					<div class="panel-body">
-						<ul class="list-unstyled">
-							<li><span class="label label-ground">GROUND</span>
-								<ul class="nav">
-									<li><a href="heat-applications-ground-bed.html">Bed</a></li> &nbsp;&middot;&nbsp;  
-									<li><a href="heat-applications-ground-on-ground.html">On-Ground</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-ground-in-floor.html">In-Floor</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-ground-in-ground.html">In-Ground</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-ground-snow-melt.html">Snow Melt</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-ground-frost.html">Frost Protection</a></li>
+			<div class="col-md-6">
+				<div class="card card-nav-tabs">
+					<div class="card-header card-header-success">
+						<div class="nav-tabs-navigation">
+							<div class="nav-tabs-wrapper">
+								<ul class="nav nav-tabs" data-tabs="tabs">
+									<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
+									<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
+									<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
 								</ul>
-							</li>
-							<li><span class="label label-bench">BENCH</span>
-								<ul class="nav">
-									<li><a href="heat-applications-bench-under-bench.html">Under-Bench</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-bench-on-bench.html">On-Bench</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-bench.html">In-Bench</a></li>
-								</ul>
-							</li>
-							<li><span class="label label-space">SPACE</span>
-								<ul class="nav">
-									<li><a href="heat-applications-space-gutter.html">Gutter</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-space-top.html">Top</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-space-perimeter.html">Perimeter</a></li>
-								</ul>
-							</li>
-							<li><span class="label label-crop">CROP</span>
-								<ul class="nav">
-									<li><a href="heat-applications-crop-in-crop.html">In-Crop</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-crop-cart-rail.html">Cart Rail</a></li>
-								</ul>
-							</li>
-						</ul>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
-		</div>	
-				
-		<div class="row">
-			<h3>Products</h3>
-		</div>
-		<div class="row">	
-			<div class="col-md-4">
-				<div class="card card-plain">
-					<a href="heat-products-sunfin.html"><img src="img/heat-sunfin.jpg" alt="BioTherm" class="card-img-top" /></a>
-					<div class="card-body">
-						<h3><a href="heat-products-sunfin.html">SunFin</a><small> &reg;</small></h3>
-						<p class="card-text">High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
-						<a href="heat-products-sunfin.html"><button type="button" class="btn btn-success"> Sunfin</button></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-plain">
-					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm" class="card-img-top" /></a>
-					<div class="card-body">
-						<h3><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h3>
-						<p>Provides incredibly even heating across the width of your greenhouse growing areas.<br /><br /></p>
-						<a href="heat-products-duofin.html"><button type="button" class="btn btn-success"> Duofin</button></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-plain">
-					<a href="heat-products-starfin.html"><img src="img/heat-starfin.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
-					<div class="card-body">
-						<h3><a href="heat-products-starfin.html">StarFin</a><small> &trade;</small></h3>
-						<p>Provides high heat output and minimizes pipes.<br /><br /><br /></p>
-						<a href="heat-products-starfin.html"><button type="button" class="btn btn-success"> Starfin</button></a>
+					<div class="card-body ">
+						<div class="tab-content text-center">
+							<div class="tab-pane active" id="Hydra">
+								<p> The Mantis&trade; will open up an entirely new view into the health of your plants.  Measure and record Real-time PH, EC, ORP, Dissolved Oxygen and temperature readings All readings are available via a local web interface on any device. </p>
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+							</div>
+							<div class="tab-pane" id="Commander">
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+							</div>
+							<div class="tab-pane" id="Roots">
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<div class="row" style="margin-top:40px;">
-			<h4>Project Examples</h4>
-		</div>
-		<div class="row">
-			<div class="col col1">
-				<a href="img/heat-application-space-top.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/heat-application-space-top.jpg" alt="BioTherm Perimeter" class="img-fluid" />
-				</a>
-			</div>
-			<div class="col col3">
-				<a href="img/heat-application-space-top-2.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/heat-application-space-top-2.jpg" alt="BioTherm Perimeter" class="img-fluid" />
-				</a>
-			</div>
-			<div class="col col4">
-				<a href="img/heat-application-space-top-3.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/heat-application-space-top-3.jpg" alt="BioTherm Perimeter" class="img-fluid" />
-				</a>
-			</div>
-			<div class="col col5">
-				<a href="img/heat-application-space-top-4.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/heat-application-space-top-4.jpg" alt="BioTherm Perimeter" class="img-fluid" />
-				</a>
-			</div>
-		</div>
-
 	</div>
+	
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+					<a href="img/tech_hydra_lt.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_hydra_lt.jpg" /></a>
+				</div>
+				<div class="card-body ">
+					<h4 class="card-title">Hydra</h4>
+					<h6 class="card-category text-muted">This is not your average meter.</h6>
+					<p class="card-description">The HYDRA reads pH, EC, ORP, DO, Temp and optionally FLOW. The combination of these readings gives the grower a deeper insight into their plants water source. Both real- time and historical readings are available through the local network web interface. Email and text notifications inform the grower when something is not quite right. The HYDRA also has the same DO control abilities as the DO COMMANDER unit. In addition, it can interface with our DOSE units to control pH and EC in your reservoir or tank. Two of the DOSE units can be used with each HYDRA for a total of 8 unique stock solutions.</p>
+				</div>
+				<div class="card-footer justify-content-center">
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+					<a href="img/tech_do_commander.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_do_commander.jpg" /></a>
+				</div>
+				<div class="card-body ">
+					<h4 class="card-title">DO Commander</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">The DO COMMANDER reads dissolved oxygen and temperature in your irrigation line or tank.  The touch screen allows for easy calibration and reading of values.  In addition, the DO COMMANDER is able to maintain your tank DO levels to within ± .1 mg/L when used with the TrueLeaf O2TOOB. Just like the HYDRA, both real-time and historical readings are available through the local network web interface. </p>
+				</div>
+				<div class="card-footer justify-content-center">
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+					<a href="img/tech_roots_io.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_roots_io.jpg" /></a>
+				</div>
+				<div class="card-body ">
+					<h4 class="card-title">Roots</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">The ROOTS module is a battery powered and solar charged water content, EC and temperature transmitter designed to give the grower
+information they need to accurately irrigate their plants. Each unit will support up to 3 of the WC/EC/Temp probes. The probes are stainless steel and will read in soil or soilless environments. The ROOTS transmit rootzone data to the CORE (required) for collection and visualization. Typical application is at least one per irrigation zone or strain.</p>
+				</div>
+				<div class="card-footer justify-content-center">
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="section">
+		<img class="img-fluid" src="img/KYG_Dashboard.jpg">
+	</div>
+</div>
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -220,11 +206,12 @@
 <!--     *********   END FOOTER     *********      -->
 
 
+
+
+
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
-<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
