--- a/case-air-sunnyside.html
+++ b/case-air-sunnyside.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Heating Systems | BioTherm Solutions</title>
+	<title>Case Study: Sunnyside Farms | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,121 +42,41 @@
 	</div>
 </nav>
 
-
-
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-heat.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heating</b> Systems</h1>
-				<h3>Efficient Greenhouse Heating</h3>
-				<h4>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
+
+<div class="container">
 	
-	<div class="container section">
-		<div class="row">
-			<div class="col-md-5">
-				<p>Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects -- whether through new construction, major upgrades, or retrofits. Each greenhouse heating system is tailored to specific climate and growing conditions. Our systems are durable and efficient which result in high success rates and peak crops.</p>
-				<p>BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money. From initial consultation to installation, BioTherm’s staff is with you every step of the way.  Each system includes comprehensive instructions for installation and operation and custom CAD drawings. All heating systems include two years of free on-going support.</p>
-				<p>BioTherm designs mission-critical heating systems for greenhouses. These buildings rapidly gain heat when the sun comes out and lose heat almost as fast when the sun disappears. Humidity levels can be jungle-like. The presence of water, fertilizer, and other corrosive chemicals is everywhere. We have invested over three decades into developing rugged heating solutions that are unique and designed to go the distance and survive to help plants thrive.</p>
-				<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
-			</div>
-			<div class="col-md-7">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-danger">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">					
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Products" data-toggle="tab"> Products</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Boiler" data-toggle="tab"> Boilers</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Ground" data-toggle="tab"> Ground</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> Crop</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> Bench</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Space" data-toggle="tab"> Space</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Industry" data-toggle="tab"> Industry</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Products">
-								<img src="img/heat-illustration.jpg" alt="BioTherm" class="img-fluid" />
-								<h4>Products</h4>	
-								<a href="heat-products-duofin.html"><button type="button" class="btn">DuoFin&trade;</button></a>
-								<a href="heat-products-hdx.html"><button type="button" class="btn">HDX&trade;</button></a>
-								<a href="heat-products-megatube.html"><button type="button" class="btn">MegaTube&trade;</button></a>
-								<a href="heat-products-microclimate-tubing.html"><button type="button" class="btn">MicroClimate&trade;</button></a>
-								<a href="heat-products-starfin.html"><button type="button" class="btn">StarFin&trade;</button></a>
-								<a href="heat-products-sunfin.html"><button type="button" class="btn">SunFin&trade;</button></a>
-							</div>
-							<div class="tab-pane" id="Boiler">
-								<h4>Boilers</h4>
-								<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
-								<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
-								<a href="heat-boilers-closed-combustion.html"><button type="button" class="btn">Boilers - Closed Combustion</button></a>
-								<a href="heat-boilers-condensing.html"><button type="button" class="btn">Boilers - Condensing</button></a>
-							</div>
-							<div class="tab-pane" id="Ground">
-								<h4>Ground Heat</h4>
-								<a href="heat-applications-ground-bed.html"><button type="button" class="btn">Bed</button></a>
-								<a href="heat-applications-ground-frost.html"><button type="button" class="btn">Frost Protection</button></a>
-								<a href="heat-applications-ground-in-floor.html"><button type="button" class="btn">In-Floor</button></a>
-								<a href="heat-applications-ground-in-ground.html"><button type="button" class="btn">In-Ground</button></a>
-								<a href="heat-applications-ground-on-ground.html"><button type="button" class="btn">On-Ground</button></a>
-								<a href="heat-applications-ground-snow-melt.html"><button type="button" class="btn">Snow Melt</button></a>
-							</div>
-							<div class="tab-pane" id="Crop">
-								<h4>Crop Heat</h4>
-								<a href="heat-applications-crop-cart-rail.html"><button type="button" class="btn">Cart Rail</button></a>
-								<a href="heat-applications-crop-in-crop.html"><button type="button" class="btn">In-Crop</button></a>
-							</div>
-							<div class="tab-pane" id="Bench">
-								<h4>Bench Heat</h4>
-								<a href="heat-applications-bench.html"><button type="button" class="btn">Bench</button></a>
-								<a href="heat-applications-bench-on-bench.html"><button type="button" class="btn">On-Bench</button></a>
-								<a href="heat-applications-bench-under-bench.html"><button type="button" class="btn">Under-Bench</button></a>
-							</div>
-							<div class="tab-pane" id="Space">
-								<h4>Space Heat</h4>
-								<a href="heat-applications-space-gutter.html"><button type="button" class="btn">Gutter</button></a>
-								<a href="heat-applications-space-perimeter.html"><button type="button" class="btn">Perimeter</button></a>
-								<a href="heat-applications-space-top.html"><button type="button" class="btn">Top</button></a>
-							</div>
-							<div class="tab-pane" id="Industry">
-								<h4>Industry</h4>
-								<a href="heat-industry-greenhouse.html"><button type="button" class="btn">Greenhouse</button></a>
-								<a href="heat-industry-institutional.html"><button type="button" class="btn">Institutional</button></a>
-								<a href="heat-industry-habitat.html"><button type="button" class="btn">Habitat</button></a>
-								<a href="heat-industry-turf.html"><button type="button" class="btn">Turf</button></a>
-								<a href="heat-industry-building.html"><button type="button" class="btn">Buildings</button></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+	<div class="row section">
+		<div class="col-md-12">
+			<figure class="figure d-block">
+			  <img src="img/case_sunnyside.jpg" style="float:right;max-width:800px" class="figure-img img-fluid rounded" alt="">
+			</figure>
+			<h3><b>Case Study: Nancy Duvall</b> <br />Sunnyside Farms, CA <br />Increased Yield and Faster Growth<br /><br /></h3>
+			<p><span class="d-inline p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p>Nancy knew that greenhouses are prone to suffer from reduced levels of CO2 and that increasing the CO2 concentration above ambient could help boost her crop yield. However, her experiences with CO2 burners had always been disappointing and she wasn’t interested in a liquid CO2 system. One option that had always intrigued her was to use exhaust gas from a boiler system, but she had assumed the technology was either unsafe or simply too expensive to implement. BioTherm had already success- fully provided rootzone heating and oxygen infusion technologies to help her grow bigger, healthier crops in less time. Since those investments had paid for themselves very quickly, she wanted to understand how a CO2 system would benefit her and requested a proposal for a centralized CO2 Enrichment system which could increase her yield even more.</p>
+			<p><br /><span class="d-inline p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
+			<p>BioTherm CO2 Enrichment systems provide elevated and uniform CO2 levels using the same equipment that heats the greenhouse. A condensing boiler is the heart of the system, and as it burns fuel, it produces combustion gases rich in CO2. Through the use of a blower and control assembly, this flue gas is routed into the greenhouse zones evenly and without a lot of complicated equipment. CO2 is introduced at truss level, and as CO2 is heavier than air, gently drops onto the plant canopy, bathing Nancy’s crops in Carbon Dioxide. Within weeks, she saw the difference. More leaves and flowers, faster growth, and higher yield. Within a few harvests, the investment bore fruit.</p>
+			<p><br /><span class="d-inline p-2 bg-success text-white"><b>How It Works</b></span></p>
+			<p>“With a completely heated floor surface, we were able to shorten our grow time by 4-5 weeks, increase production, and grow a more consistent and healthy crop,” Patrick said.</p>
+			<p>Also, while maintaining a gentle and con- sistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
+			<p>With the added benefit of high-efficiency boilers, Patrick was able to save money on fuel, adding to his bottom line. Because of the increase in energy savings, Michael’s even qualified for a grant which helped pay for the boilers!</p>
 		</div>
-		
-		
+
 	</div>
+
+	<div class="section">
+	</div>
+
 </div>
 
-
+</div>
 
 <!--     *********    FOOTER     *********      -->
 <footer class="footer footer-white footer-big">
@@ -188,17 +108,19 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+	<div class="copyright text-center">
+		<p>&#xA9;<script>document.write(new Date().getFullYear())</script> BioTherm, Inc.</p>
+	</div>
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
