--- a/air.html
+++ b/air.html
@@ -46,7 +46,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized Air</h1>
+				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
 				<h4>Biotherm creates innovative technology solutions for commerical plant growers.</h4>
 			</div>
 		</div>
